<resources>
    <string name="app_name">myMonte: University Hub</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="dinning_commons">Dinning Commons</string>
    <string name="library_study_room_reservation">Library Study Room Reservation</string>

    <string-array name="my_items">
        <item>Dummy Item 1</item>
        <item>Dummy Item 2</item>
        <item>Dummy Item 3</item>
        <item>Dummy Item 4</item>
        <item>Dummy Item 5</item>
        <item>Dummy Item 6</item>
        <item>Dummy Item 7</item>
        <item>Dummy Item 8</item>
        <item>Dummy Item 9</item>
        <item>Dummy Item 10</item>
        <item>Dummy Item 11</item>
        <item>Dummy Item 12</item>
        <item>Dummy Item 13</item>
        <item>Dummy Item 14</item>


    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="redirectURL">com.oktapreview.dev-568843</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_okta_login">oktaLogin</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">otterID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This otterID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialog_message">This will remove your previously saved location.</string>
    <string name="dialog_title">Save new parking location?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_task">Add New Task</string>
    <string name="what_do_you_need_to_do">What do you need to do?</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <string-array name="buildings">
        <item>Please choose a buiding…</item>
        <item>Administration Building(1)</item>
        <item>Alumni and Visitors Center(97)</item>
        <item>Aquatic Center(100)</item>
        <item>Asilomar Hall(203)</item>
        <item>Avocet Hall(208)</item>
        <item>Beach Hall(21)</item>
        <item>Black Box Cabaret(81)</item>
        <item>Chapman Science Academic Center(53)</item>
        <item>Child Care Center(91)</item>
        <item>Cinematic Arts and Technology (27)</item>
        <item>Coast Hall (45)</item>
        <item>CSUMB at North Salinas (170)</item>
        <item>CSUMB at Ryan Ranch (1001)</item>
        <item>CSUMB at Salinas City Center (1002)</item>
        <item>Cypress Hall (202)</item>
        <item>Del Mar (3)</item>
        <item>Dining Commons (16)</item>
        <item>Dunes Hall (10)</item>
        <item>Facilities Services and Operations (37)</item>
        <item>Field House (902)</item>
        <item>Field Office (902C)</item>
        <item>Freeman field (STADIUM)</item>
        <item>Gavilan Hall (201)</item>
        <item>Green Hall (58)</item>
        <item>Harbor Hall (46)</item>
        <item>Health and Wellness Services (80)</item>
        <item>Heron Hall (18)</item>
        <item>IT Services (43)</item>
        <item>Joel and Dena Gambord Business and Information Technology Building (506)</item>
        <item>Mail Room/Shipping and Receiving (35)</item>
        <item>Manzanita Hall (205)</item>
        <item>Meeting House (98)</item>
        <item>Monterey College of Law (MCOL)</item>
        <item>Mountain Hall (84)</item>
        <item>Music Hall (30)</item>
        <item>Oaks Hall (490)</item>
        <item>Oaks Hall Annex (491)</item>
        <item>Oaks Hall Storage (491)</item>
        <item>Ocean Hall (86)</item>
        <item>Otter Express (14)</item>
        <item>Otter Soccer Complex (SOCCER)</item>
        <item>Otter Sports Center (90)</item>
        <item>Pacific Hall (44)</item>
        <item>Pinnacles Suites (302)</item>
        <item>Playa (2)</item>
        <item>Promontory Center (326)</item>
        <item>Promontory East (327)</item>
        <item>Promontory West (325)</item>
        <item>Reading Center (59)</item>
        <item>Sand Hall (8)</item>
        <item>Sanderling Hall (211)</item>
        <item>Science Instructional Lab Annex (50)</item>
        <item>Science Research Lab Annex (13)</item>
        <item>Softball field (SOFTBALL)</item>
        <item>Strawberry Apartments (301)</item>
        <item>Student Center (12)</item>
        <item>Student Recreation Field (REC)</item>
        <item>Student Services (47)</item>
        <item>Surf Hall (6)</item>
        <item>Tanimura and Antle Family Memorial Library (508)</item>
        <item>Telecommunications (41)</item>
        <item>Tide Hall (23)</item>
        <item>Tortuga Hall (210)</item>
        <item>University Center (29)</item>
        <item>University Storage (36)</item>
        <item>Valley Hall (82)</item>
        <item>Vineyard Suites (303)</item>
        <item>Visual and Public Art (VPA) - Center (72)</item>
        <item>Visual and Public Art (VPA)-East (71)</item>
        <item>Visual and Public Art (VPA)-West (73)</item>
        <item>Watershed Institute (42)</item>
        <item>Wave Hall (4)</item>
        <item>Willet Hall (204)</item>
        <item>World Languages and Cultures-North (49)</item>
        <item>World Languages and Cultures-South (48)</item>
        <item>World Theater (28)</item>
        <item>Yarrow Hall (206)</item>
    </string-array>
</resources>
