<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:radius="5dp"
    android:layout_margin="20dp"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/addTaskPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDueTime"
        android:layout_alignParentStart="true"
        android:text="Task Details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTaskPrompt"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageButton
        android:id="@+id/btnDueDate"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/txtTaskName"
        android:contentDescription="@string/due_date"
        android:src="@drawable/ic_date_range_black_24dp"
        android:text="@string/due_date" />

    <ImageButton
        android:id="@+id/btnDueTime"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/txtTaskName"
        android:layout_marginEnd="13dp"
        android:contentDescription="@string/due_time"
        android:src="@drawable/ic_access_time_black_24dp"
        android:layout_toEndOf="@+id/btnDueDate" />

    <TextView
        android:id="@+id/dueDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnDueDate"
        android:layout_toStartOf="@+id/btnDueTime"
        android:text="@string/due_date"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dueTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDueTime"
        android:layout_below="@+id/btnDueTime"
        android:layout_toEndOf="@+id/btnDueDate"
        android:text="@string/due_time"
        android:textAlignment="center"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnDeleteTask"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dueDateText"
        android:layout_marginTop="21dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete" />

</RelativeLayout>